--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mocha": "^9.0.3",
     "selenium-webdriver": "^4.0.0-beta.4",
     "ts-node": "^10.1.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "dateformat": "^3.0.3"
   }
 }
