--- a/package.json
+++ b/package.json
@@ -15,14 +15,11 @@
     "@types/node": "^16.4.13",
     "@types/selenium-webdriver": "^4.0.15",
     "chai": "^4.3.4",
+    "dateformat": "^3.0.3",
     "mocha": "^9.0.3",
+    "nyc": "^15.1.0",
     "selenium-webdriver": "^4.0.0-beta.4",
     "ts-node": "^10.1.0",
-<<<<<<< HEAD
-    "typescript": "^4.3.5",
-    "dateformat": "^3.0.3"
-=======
     "typescript": "^4.3.5"
->>>>>>> 4c759412d52de4d13445ff8f1aa886f0220605a3
   }
 }
